# corgi-hack

./: .gitignore  README.md  start.sh
monorepo/backend/: README.md  alembic.ini  crud.py  database.py  main.py  pyproject.toml  requirements.txt  step_by_step_plan.md
monorepo/backend/migrations/: env.py  offline_script.py
monorepo/backend/migrations/versions/: 20250616_2159-b551ba6a7aa2_.py  20250617_0137-23c4efc7961d_.py  20250617_0326-e0ccaaf527d7_.py  20250617_0329-87f2d9e17542_.py
monorepo/backend/models/: __init__.py  autoupload_email.py  base.py  claim.py  document.py  inbox.py  policyholder.py
monorepo/backend/repositories/: __init__.py  autoupload_email.py  base.py  claim.py  document.py  inbox.py  policyholder.py
monorepo/backend/routes/: __init__.py  health.py
monorepo/backend/routes/ai/: routes.py
monorepo/backend/routes/autoupload_email/: routes.py
monorepo/backend/routes/claims/: __init__.py  routes.py
monorepo/backend/routes/documents/: routes.py
monorepo/backend/routes/inbox/: routes.py
monorepo/backend/routes/policyholders/: __init__.py  routes.py
monorepo/backend/routes/webhooks/: routes.py
monorepo/backend/schemas/: __init__.py  ai.py
monorepo/backend/schemas/autoupload_email/: __init__.py  schemas.py
monorepo/backend/schemas/claims/: __init__.py  schemas.py
monorepo/backend/schemas/documents/: schemas.py
monorepo/backend/schemas/gemini_models/claims/: extract_info.json
monorepo/backend/schemas/gemini_models/policyholders/: claim_analysis.json  extract_info.json
monorepo/backend/schemas/inbox/: __init__.py  schemas.py
monorepo/backend/schemas/policyholders/: __init__.py  schemas.py
monorepo/backend/schemas/webhooks/: __init__.py  mailgun.py  response.py
monorepo/backend/services/: __init__.py  gemini.py  supabase.py
monorepo/backend/tests/: README.md
monorepo/backend/tests/unit/models/: test_claim.py
monorepo/backend/tests/unit/repositories/: test_claim_repository.py
(+965 files in other folders)
